data/qt/ui.css
/*
* Grail Style Sheet for Qt widgets and Plugins
*/

/**
 * @section Component, Dialog
 */

Component,
Dialog {
    background-color: #4b5056;
    }

/**
 * @section QMenuBar
 */

QMenuBar {
    background-color: #4b5056;
    color: #f1f1f1;
    }

    QMenuBar::item {
        background: transparent;
        }

        QMenuBar::item:selected {
            background: transparent;
            border: 1px solid #76797C;
            }

        QMenuBar::item:pressed {
            border: 1px solid #8a9fbb;
            background-color: #8a9fbb;
            color: #ffffff;
            margin-bottom: -1px;
            padding-bottom: 1px;
            }

/**
 * @section QComboBox
 */

QComboBox {
    selection-background-color: #3daee9;
    min-width: 75px;
    color: #222;
    border-radius: 3px;
    padding: 4px 8px;
    margin: 3px;
    background: #4facfe;
    border: 1px solid #2c71ae;
    }

    QComboBox:on {
        padding-top: 3px;
        padding-left: 4px;
        selection-background-color: #4facfe;
        }

    QComboBox:hover {
        background: #6bbaff;
        }

    QComboBox::menu-indicator {
        image: url(:/rc/branch-open.png);
        subcontrol-position: right center;
        subcontrol-origin: padding;
        left: -3px;
        top: -1px;
        border: none;
        }

    QComboBox::drop-down {
        subcontrol-origin: padding;
        subcontrol-position: top right;
        width: 15px;
        border: none;
        border-radius: 3px;
        }

    QComboBox::down-arrow {
        image: url(:/rc/branch-open.png);
        }

    QComboBox::down-arrow:on,
    QComboBox::down-arrow:hover,
    QComboBox::down-arrow:focus {
        image: url(:/rc/branch-open.png);
        }


QAbstractSpinBox {
    padding: 4px;
    border: 1px solid #76797C;
    background-color: #232629;
    color: #f1f1f1;
    border-radius: 3px;
    min-width: 75px;
    }

    QAbstractSpinBox:up-button {
        background-color: transparent;
        subcontrol-origin: border;
        subcontrol-position: center right;
        }

    QAbstractSpinBox:down-button {
        background-color: transparent;
        subcontrol-origin: border;
        subcontrol-position: center left;
        }

    QAbstractSpinBox::up-arrow,
    QAbstractSpinBox::up-arrow:disabled,
    QAbstractSpinBox::up-arrow:off {
        image: url(:/rc/up_arrow_disabled.png);
        width: 10px;
        height: 10px;
        }

    QAbstractSpinBox::up-arrow:hover {
        image: url(:/rc/up_arrow.png);
        }


    QAbstractSpinBox::down-arrow,
    QAbstractSpinBox::down-arrow:disabled,
    QAbstractSpinBox::down-arrow:off {
        image: url(:/rc/down_arrow_disabled.png);
        width: 10px;
        height: 10px;
        }

    QAbstractSpinBox::down-arrow:hover {
        image: url(:/rc/down_arrow.png);
        }

/**
 * @section QTableWidget
 */

QTableView {
    border: none;
    background-color: #2f2f2f;
    alternate-background-color: #393939;
    show-decoration-selected: 1;
    outline: 0;
    }

    QHeaderView {
        background: #393939;
        color: #f1f1f1;
        border: none;
        border-bottom: 1px solid #2f2f2f;
        }

        QHeaderView::section {
            border: none;
            border-right: 1px solid #2f2f2f;
            margin: 0;
            background: #393939;
            color: #f1f1f1;
            padding: 3px;
            min-height: 20px;
            }

    QTableView QScrollBar::handle:vertical {
        background: #ddd;
        min-height: 20px;
        border-radius: 3px;
        }

    QTableView::item {
        color: #e6e6e6;
        padding: 4px 12px;
        margin: 0;
        border-bottom: 1px solid transparent;
        qproperty-wordWrap: true;
        }

    QTableView::item:selected {
        background: #8a9fbb;
        border-bottom: 1px solid #8a9fbb;
        color: #e6e6e6;
        }


/***
 * @section Splitter
 */

Splitter::handle {
    background-color: #343434;
    }

/**
 * @section Label
 */

Label {
    color: #f1f1f1;
    }

/**
 * @section Button
 */

Button {
    color: #31343a;
    border-radius: 3px;
    padding: 4px 8px;
    margin: 3px;
    background: #4facfe;
    border: 1px solid #2c71ae;
    }

    Button:hover {
        color: #31343a;
        background: #6bbaff;
        }

    Button::menu-indicator {
        image: url(:/rc/branch-open.png);
        subcontrol-position: right center;
        subcontrol-origin: padding;
        left: -3px;
        top: -1px;
        }

/**
 * @section Toolbar
 */

Toolbar {
    background: #4b5056;
    border-top: 1px solid #4b5056;
    padding: 5px;
    min-height: 24px;
    }

    Toolbar QToolButton {
        border: 1px solid transparent;
        background: none;
        border-radius: 3px;
        padding: 2px;
        }

/**
 * @section Scrollbar
 */

QScrollBar:horizontal {
    background: transparent;
    border: none;
    height: 8px;
    margin: 4px 4px 4px 0;
    }

    QScrollBar:vertical {
        background: transparent;
        border: none;
        width: 8px;
        margin: 4px 4px 4px 0;
        }

    QScrollBar::handle:horizontal {
        background: rgba(0, 0, 0, 0.6);
        min-width: 20px;
        border-radius: 3px;
        }

    QScrollBar::handle:vertical {
        background: rgba(0, 0, 0, 0.6);
        min-height: 20px;
        border-radius: 3px;
        }

    QScrollBar::add-line:vertical {
        background: transparent;
        border: none;
        height: 0;
        width: 0;
        subcontrol-position: bottom;
        subcontrol-origin: margin;
        }

    QScrollBar::sub-line:vertical {
        background: transparent;
        border: none;
        height: 0;
        width: 0;
        subcontrol-position: top;
        subcontrol-origin: margin;
        }

    QScrollBar::up-arrow:vertical, QScrollBar::down-arrow:vertical {
        width: 0;
        height: 0;
        background: none;
        border: none;
        }
/* ... */

